old-style-connect: Don't fix connects to static slots

Only connect works, disconnect doesn't build.
And you can't use old-style disconnect to break a new-style connect.
The only solution is to not apply fixits to {dis}connects to static slots.

BUG: 355593